# ChimeraMemory

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.githooks/: post-commit
chimera_memory/: __init__.py  cli.py  codex_setup.py  cognitive.py  config.py  db.py  db_split.py  embeddings.py  enhancement_worker.py  hermes_gemini_cloudcode_adapter.py  hermes_gemini_oauth.py  hermes_google_oauth.py  identity.py  indexer.py  memory.py  memory_authored_writeback.py  memory_auto_capture.py  memory_enhancement.py  memory_enhancement_credentials.py  memory_enhancement_google.py  memory_enhancement_grading.py  memory_enhancement_hermes_oauth.py  memory_enhancement_http_client.py  memory_enhancement_model_client.py  memory_enhancement_oauth.py  memory_enhancement_oauth_flow.py  memory_enhancement_oauth_import.py  memory_enhancement_provider.py  memory_enhancement_provider_sidecar.py  memory_enhancement_queue.py  memory_enhancement_runner.py  memory_enhancement_shadow.py  memory_enhancement_sidecar.py  memory_entities.py  memory_entity_wiki.py  memory_file_edge_classifier.py  memory_file_edges.py  memory_frontmatter.py  memory_governance.py  memory_import_atom_blogger.py  (+23 more)
docs/: MEMORY_ENHANCEMENT_SIDECAR.md  MIGRATION_PIPELINE.md  MODULE_LAYOUT.md  OB1_COMPARISON.md
tests/: test_cli_enhance.py  test_codex_setup.py  test_cognitive.py  test_db_split.py  test_identity.py  test_indexer.py  test_memory_authored_writeback.py  test_memory_auto_capture.py  test_memory_enhancement.py  test_memory_enhancement_credentials.py  test_memory_enhancement_grading.py  (+40 more)
(+2 files in other folders)
