[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera-memory"
version = "0.1.0"
description = "Index Claude Code session transcripts into queryable SQLite. Perfect recall for coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chimera Agency" },
]
keywords = ["claude", "claude-code", "memory", "transcript", "sqlite", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "watchdog>=4.0.0",
    "fastembed>=0.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
chimera-memory = "chimera_memory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["chimera_memory"]
